<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TableRow>

            <TextView
                android:text="@string/date"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved Date Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:id="@+id/saved_date_tv"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/location"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved Location Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:id="@+id/saved_location_tv"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/onsight"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved Onsights Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/saved_onsight_tv"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/flash"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved Flash Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/saved_flash_tv"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/redpoint"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved Redpoint Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/saved_redpoint_tv"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/no_send"
                android:textStyle="bold"/>

            <TextView
                android:text="Saved No Send Placeholder"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/saved_no_send_tv"/>

        </TableRow>

    </TableLayout>


</androidx.cardview.widget.CardView>