<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntryFragment">

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp">

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/location"
                android:gravity="center"/>

            <EditText
                android:id="@+id/location_edit_text"
                android:layout_width="190dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <Button
                android:text="@string/set_date"/>

            <TextView
                android:id="@+id/date_text_view"
                android:layout_marginStart="10dp"/>

        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onsight" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"/>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/onsight_grid_layout">

            </GridLayout>

        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flash" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/flash_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </GridLayout>

        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redpoint" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/redpoint_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </GridLayout>

        </TableRow>

        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_send" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/no_send_grid_layout"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            </GridLayout>

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="18dp">

            <Button
                android:text="@string/save_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

</ScrollView>